vlib/v/checker/tests/reserved_type_name_const_err.out
vlib/v/checker/tests/reserved_type_name_const_err.vv:1:7: error: invalid use of reserved type `int` as a const name
    1 | const int = 3
      |       ~~~~~~~
    2 | 
    3 | const (
vlib/v/checker/tests/reserved_type_name_const_err.vv:4:2: error: invalid use of reserved type `f64` as a const name
    2 | 
    3 | const (
    4 |     f64 = 'string'
      |     ~~~~~~~~~~~~~~
    5 | )
